[tool.poetry]
name = "wikiquote2fortune"
version = "0.2.0"
description = "Create a fortune file from a wikiquote page"
authors = ["Daniel Kertesz <daniel@spatof.org>"]
license = "BSD"

readme = "README.rst"
repository = "https://github.com/piger/wikiquote2fortune"
homepage = "https://github.com/piger/wikiquote2fortune"

[tool.poetry.dependencies]
python = "^3.4"
beautifulsoup4 = "^4.6"
requests = "^2.21"
click = "^7.0"
lxml = "^4.2"

[tool.poetry.dev-dependencies]
see = "^1.4"
better_exceptions = "^0.2.1"
black = { version = "18.9b0", python = "^3.6" }

[tool.poetry.scripts]
wikiquote2fortune = "wikiquote2fortune.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
